1994-08-12  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c, src/ded.c, src/dedscan.c, src/dedview.c, src/boxchars.c:
	lint:SunOS

	* src/boxchars.c: use MODULE_ID

1994-08-02  Thomas E. Dickey  <dickey@clark.net>

	* src/dedscan.c: added logic to perform DED_CM_LOOKUP

1994-07-29  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c, src/dedview.c:
	addchnstr may be a function in SYS5_CURSES

1994-07-26  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	made a (temporary?) hack to add "-b" option so I can test SYS5_CURSES w/o
	having box characters.

	* src/boxchars.c: vline, hline are macros somewhere on SunOS.

1994-07-23  Thomas E. Dickey  <dickey@clark.net>

	* src/ftree.c: addchnstr doesn't move.

	* user/ded.man: added note about '*' repeat-count

	* certify/release.txt: '*' repeat-count

	* src/version.h: Allow '*' to have repeat count.
	Handle empty directories better (force '.').
	Mods for $DED_TREE.
	Revised ftree display; do left/right scroll; renamed 'A' to '&'.
	Support for auxiliary character set/ncurses.
	Added color support.
	Allow resizing (if curses supports it).

	* src/README: fixed some

	* src/history.c:
	added 'show_history()'; shows the command-stack after the current command.

	* src/ded.h: mods to make '*' command accept repeat-count

	* src/dedshow.c:
	made 'dedshow2()' public, so I can use it from 'show_history()'

	* src/dedshow.c: use MODULE_ID

	* src/deddoit.c:
	moved 'cmd_history' to public view, for use in 'show_history()'

	* src/ded.c: split out 'show_history()'

	* src/ftree.c: make the '=' rename command have history

	* src/dedscan.c:
	force '.' into empty filelists to simplify adding files to empty directories

	* src/dedline.c:
	removed a hack that I'd used on the apollo: it was possible to chgrp a
	file from the command line, when the system call 'chown()' wouldn't.

	* src/dedline.c: compiler-warning (gcc on Solaris)

	* certify/release.txt: doc'd a bunch of changes to ftree
